--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:name=".GetFlickredApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.HomeActivity">
+
+        <activity android:name=".ui.flickr.FlickrActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +21,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.flickr.FlickrActivity" />
     </application>
 
 </manifest>
