--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
+
     defaultConfig {
         applicationId "me.tiagomota.getflickred"
         minSdkVersion 21
@@ -12,10 +13,21 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    sourceSets {
+        def commonTestDir = 'src/commonTest/java'
+        test {
+            java.srcDir commonTestDir
+        }
+        androidTest {
+            java.srcDir commonTestDir
         }
     }
 }
@@ -25,6 +37,7 @@ dependencies {
 
     final SUPPORT_LIBRARY_VERSION = '24.2.1'
     final DAGGER_VERSION = '2.5'
+
 
     // Google Support Library
     compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"                 // AppCompat
@@ -51,9 +64,15 @@ dependencies {
     androidTestApt daggerCompiler
 
     // Testing
+    def jUnit = "junit:junit:4.12"
+    def mockito = "org.mockito:mockito-core:1.10.19"
+
+    androidTestCompile jUnit
+    androidTestCompile mockito
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    testCompile 'junit:junit:4.12'
+    testCompile jUnit
+    testCompile mockito
 }
