--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,11 @@ android {
     }
 
     buildTypes {
+
+        debug {
+            testCoverageEnabled = true
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -31,6 +36,10 @@ android {
             java.srcDir commonTestDir
         }
     }
+
+    jacoco {
+        version = '0.7.7'
+    }
 }
 
 dependencies {
@@ -38,6 +47,10 @@ dependencies {
 
     final SUPPORT_LIBRARY_VERSION = '24.2.1'
     final DAGGER_VERSION = '2.5'
+    final ESPRESSO_VERSION = '2.2.1'
+    final RUNNER_VERSION = '0.5'
+    final DEXMAKER_VERSION = '1.4'
+
 
 
     // Google Support Library
@@ -70,9 +83,18 @@ dependencies {
 
     androidTestCompile jUnit
     androidTestCompile mockito
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    androidTestCompile "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
+    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$ESPRESSO_VERSION") {
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+    }
+    androidTestCompile "com.android.support.test.espresso:espresso-core:$ESPRESSO_VERSION"
+    androidTestCompile "com.android.support.test:runner:$RUNNER_VERSION"
+    androidTestCompile "com.android.support.test:rules:$RUNNER_VERSION"
+    androidTestCompile "com.crittercism.dexmaker:dexmaker:$DEXMAKER_VERSION"
+    androidTestCompile "com.crittercism.dexmaker:dexmaker-dx:$DEXMAKER_VERSION"
+    androidTestCompile "com.crittercism.dexmaker:dexmaker-mockito:$DEXMAKER_VERSION"
 
     testCompile jUnit
     testCompile mockito
